--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -168,11 +168,6 @@
     "            emissions['Mode_confirm_kg_CO2'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
     "            emissions['distance'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
     "\n",
-    "            # Sum daily energy for each user\n",
-    "            energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance']].sum()\n",
-    "            energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "            energy['distance'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "\n",
     "            # Add 7-day rolling avg smoothing to better see trends\n",
     "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
     "            mode_distance['distance_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
@@ -274,22 +269,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = 'Net Daily Energy (All Users, excluding air)'\n",
-    "file_name = \"ts_energy_user%s\"%file_suffix\n",
+    "if (len(dynamic_labels) == 0):\n",
+    "    plot_title_no_quality = 'Net Daily Energy (All Users, excluding air)'\n",
+    "    file_name = \"ts_energy_user%s\"%file_suffix\n",
     "\n",
-    "try:\n",
-    "    # Energy per week across all users (net impact)\n",
-    "    plot_data = energy.groupby(['date_time'], as_index=False)['Mode_confirm_EI(kWH)'].agg(['sum'])\n",
-    "    plot_data = plot_data.merge(active_users, on='date_time')\n",
-    "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
+    "    try:\n",
+    "        # Energy per week across all users (net impact)\n",
+    "        plot_data = energy.groupby(['date_time'], as_index=False)['Mode_confirm_EI(kWH)'].agg(['sum'])\n",
+    "        plot_data = plot_data.merge(active_users, on='date_time')\n",
+    "        plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
-    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Energy (kWH/day/user)'\n",
-    "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
-    "except:\n",
-    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "        ylab = 'Energy (kWH/day/user)'\n",
+    "        timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
+    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
