Setting the default is_debug_mode flag to False. This will disable call to print the CO2 emission calculation.

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -31,7 +31,7 @@
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
-    "is_debug_mode = True\n",
+    "is_debug_mode = False\n",
     "dynamic_labels = {}"
    ]
   },
