Energy_calculations.ipynb added justification for computation of total_lb_CO2 emission in Dynamic Label case, and total_kg_CO2_emission in default config case.

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  Case: label_options is present on the config file\n",
+    "# Case: label_options is present on the config file\n",
     "if len(dynamic_labels) > 0:\n",
     "    plot_title_no_quality=f\"Sketch of Total Kilograms of CO2 Emissions of {mode_of_interest} trips\"\n",
     "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
@@ -239,6 +239,9 @@
     "        alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
     "        \n",
     "        if (is_debug_mode == True):\n",
+    "            # Currently, we're only displaying the CO2 emission in kg for Dynamic Config case in the chart.\n",
+    "            # Computing CO2 emission in Imperial system i.e. in lb, so it's easy for comparision and validate the changes from kg to lb is justified.\n",
+    "            # We're displaying both total_lb_CO2_emission and total_kg_CO2_emission calculation in debugging mode.\n",
     "            ebco2_lb=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
     "            ebco2_lb.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
     "            ebco2_lb = ebco2_lb.reset_index()\n",
@@ -273,6 +276,9 @@
     "        alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
     "\n",
     "        if (is_debug_mode == True):\n",
+    "            # Currently, we're only displaying the CO2 emission in lb for Default Mapping case.\n",
+    "            # Computing CO2 emission in Imperial system i.e. in kg, so it's easy for comparision and validate the changes from lb to kg is justified.\n",
+    "            # We're displaying both total_lb_CO2_emission and total_kg_CO2_emission calculatoin in debugging mode.\n",
     "            ebco2_kg=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(kg)': ['sum', 'mean']},)\n",
     "            ebco2_kg.columns = ['total_kg_CO2_emissions', 'average_kg_CO2_emission']\n",
     "            ebco2_kg = ebco2_kg.reset_index()\n",
