Refactor both energy_calculations and generic_timeseries notebook to avoid code duplication for dynamic labels and default mapping cases.

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -215,79 +215,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Case: label_options is present on the config file\n",
-    "if len(dynamic_labels) > 0:\n",
-    "    plot_title_no_quality=f\"Sketch of Total Kilograms of CO2 Emissions of {mode_of_interest} trips\"\n",
-    "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
+    "def ebco2_compute(data_eb, weight_unit):\n",
+    "    ebco2=data_eb.groupby('Replaced_mode').agg({f'CO2_Impact({weight_unit})': ['sum', 'mean']},)\n",
+    "    ebco2.columns = [f'total_{weight_unit}_CO2_emissions', f'average_{weight_unit}_CO2_emission']\n",
+    "    ebco2 = ebco2.reset_index()\n",
+    "    ebco2 = ebco2.sort_values(by=[f'total_{weight_unit}_CO2_emissions'], ascending=False)\n",
+    "    return ebco2\n",
     "\n",
+    "def display_total_CO2_emissions(data_eb, weight_unit, weight_unit_debug, debug_df, mode_of_interest):\n",
     "    try:\n",
-    "        ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(kg)': ['sum', 'mean']},)\n",
-    "        ebco2.columns = ['total_kg_CO2_emissions', 'average_kg_CO2_emission']\n",
-    "        ebco2 = ebco2.reset_index()\n",
-    "        ebco2 = ebco2.sort_values(by=['total_kg_CO2_emissions'], ascending=False)\n",
-    "        ebco2['boolean'] = ebco2['total_kg_CO2_emissions'] > 0\n",
-    "        net_CO2_emissions = round(sum(ebco2['total_kg_CO2_emissions']), 2)\n",
+    "        plot_title_no_quality=f\"Sketch of Total {weight_unit} of CO2 Emissions of {mode_of_interest} trips\"\n",
+    "        file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
+    "        \n",
+    "        ebco2 = ebco2_compute(data_eb, weight_unit)\n",
+    "        net_CO2_emissions = round(sum(ebco2[f'total_{weight_unit}_CO2_emissions']), 2)\n",
+    "        ebco2['boolean'] = ebco2[f'total_{weight_unit}_CO2_emissions'] > 0\n",
     "\n",
-    "        x = ebco2['total_kg_CO2_emissions']\n",
+    "        x = ebco2[f'total_{weight_unit}_CO2_emissions']\n",
     "        y = ebco2['Replaced_mode']\n",
-    "        xLabel = 'CO2 Emissions (kg)'\n",
+    "        xLabel = f'CO2 Emissions ({weight_unit})'\n",
     "        yLabel = 'Replaced Mode'\n",
     "        color = ebco2['boolean']\n",
     "\n",
-    "        plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(kg CO2 Emissions )\\n\"+quality_text\n",
+    "        plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}({weight_unit} CO2 Emissions )\\n\"+quality_text\n",
     "        CO2_impact(x,y,color,plot_title, xLabel,yLabel,file_name)\n",
     "        alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
-    "        \n",
+    "\n",
+    "        # For debugging: Computing and displaying Total CO2 emissions in both Metric(kg) and Imperial(lb) unit system for easy comparison.\n",
     "        if (is_debug_mode == True):\n",
-    "            # Currently, we're only displaying the CO2 emission in kg for Dynamic Config case in the chart.\n",
-    "            # Computing CO2 emission in Imperial system i.e. in lb, so it's easy for comparision and validate the changes from kg to lb is justified.\n",
-    "            # We're displaying both total_lb_CO2_emission and total_kg_CO2_emission calculation in debugging mode.\n",
-    "            ebco2_lb=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
-    "            ebco2_lb.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
-    "            ebco2_lb = ebco2_lb.reset_index()\n",
-    "            ebco2_lb = ebco2_lb.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
-    "            \n",
-    "            scaffolding.print_CO2_emission_calculations(data_eb, ebco2_lb, ebco2, dynamic_labels)\n",
-    "     \n",
+    "            ebco2_debug = ebco2_compute(data_eb, weight_unit_debug)\n",
+    "            if (weight_unit == 'kg'):\n",
+    "                scaffolding.print_CO2_emission_calculations(data_eb, ebco2_debug, ebco2, dynamic_labels)\n",
+    "            else:\n",
+    "                scaffolding.print_CO2_emission_calculations(data_eb, ebco2, ebco2_debug, dynamic_labels)\n",
     "    except:\n",
     "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
-    "# case: when label_options is absent from the config file\n",
-    "else: \n",
-    "    plot_title_no_quality=f\"Sketch of Total pounds of CO2 Emissions of {mode_of_interest} trips\"\n",
-    "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
     "\n",
-    "    try:\n",
-    "        ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
-    "        ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
-    "        ebco2 = ebco2.reset_index()\n",
-    "        ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
-    "        ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
-    "        net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
-    "\n",
-    "        x = ebco2['total_lb_CO2_emissions']\n",
-    "        y = ebco2['Replaced_mode']\n",
-    "        xLabel = 'CO2 Emissions (lb)'\n",
-    "        yLabel = 'Replaced Mode'\n",
-    "        color = ebco2['boolean']\n",
-    "\n",
-    "        plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(lb CO2 Emissions )\\n\"+quality_text\n",
-    "        CO2_impact(x,y,color,plot_title,xLabel,yLabel,file_name)\n",
-    "        alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
-    "\n",
-    "        if (is_debug_mode == True):\n",
-    "            # Currently, we're only displaying the CO2 emission in lb for Default Mapping case.\n",
-    "            # Computing CO2 emission in Imperial system i.e. in kg, so it's easy for comparision and validate the changes from lb to kg is justified.\n",
-    "            # We're displaying both total_lb_CO2_emission and total_kg_CO2_emission calculatoin in debugging mode.\n",
-    "            ebco2_kg=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(kg)': ['sum', 'mean']},)\n",
-    "            ebco2_kg.columns = ['total_kg_CO2_emissions', 'average_kg_CO2_emission']\n",
-    "            ebco2_kg = ebco2_kg.reset_index()\n",
-    "            ebco2_kg = ebco2_kg.sort_values(by=['total_kg_CO2_emissions'], ascending=False)\n",
-    "            \n",
-    "            scaffolding.print_CO2_emission_calculations(data_eb, ebco2, ebco2_kg, dynamic_labels)\n",
-    "    except:\n",
-    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "if (len(dynamic_labels) > 0):\n",
+    "    display_total_CO2_emissions(data_eb,'kg','lb', debug_df, mode_of_interest)\n",
+    "else:\n",
+    "    display_total_CO2_emissions(data_eb,'lb','kg', debug_df, mode_of_interest)"
    ]
   }
  ],
