--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -147,6 +147,25 @@
    },
    "outputs": [],
    "source": [
+    "def compute_daily_metrics(data, weight_unit, distance_unit):\n",
+    "    mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[[f'{distance_unit}']].sum()\n",
+    "    mode_distance.rename(columns={'sum':f'{distance_unit}'}, inplace=True)\n",
+    "    mode_distance[f'{distance_unit}'] = mode_distance[f'{distance_unit}'].fillna(0)\n",
+    "    \n",
+    "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'Mode_confirm_{weight_unit}_CO2', f'{distance_unit}']].sum()\n",
+    "    emissions[f'Mode_confirm_{weight_unit}_CO2'] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
+    "    emissions[f'{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
+    "    \n",
+    "    energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', f'{distance_unit}']].sum()\n",
+    "    energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "    energy[f'{distance_unit}'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "    \n",
+    "    mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    mode_distance[f'{distance_unit}smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    emissions[f'{distance_unit}_smooth'] = emissions.groupby(['user_id'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    energy[f'{distance_unit}_smooth'] = energy.groupby(['user_id'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    return mode_counts, mode_distance, emissions, energy\n",
+    "\n",
     "if len(expanded_ct) > 0:\n",
     "    # Get the count of unique users that were active on each given date\n",
     "    active_users = pd.DataFrame(data.groupby(['date_time'], as_index=False)['user_id'].nunique())\n",
@@ -158,42 +177,9 @@
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
     "        if (len(dynamic_labels)) > 0:\n",
-    "            # Sum daily distance traveled for each mode\n",
-    "            mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance']].sum()\n",
-    "            mode_distance.rename(columns={'sum':'distance'}, inplace=True)\n",
-    "            mode_distance['distance'] = mode_distance['distance'].fillna(0)\n",
-    "\n",
-    "            # Sum daily emissions for each user\n",
-    "            emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_kg_CO2', 'distance']].sum()\n",
-    "            emissions['Mode_confirm_kg_CO2'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
-    "            emissions['distance'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
-    "\n",
-    "            # Add 7-day rolling avg smoothing to better see trends\n",
-    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            mode_distance['distance_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            emissions['distance_smooth'] = emissions.groupby(['user_id'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            energy['distance_smooth'] = energy.groupby(['user_id'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics(data, weight_unit = 'kg', distance_unit = 'distance')\n",
     "        else:\n",
-    "            # Sum daily distance traveled for each mode\n",
-    "            mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
-    "            mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
-    "            mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
-    "\n",
-    "            # Sum daily emissions for each user\n",
-    "            emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_lb_CO2', 'distance_miles']].sum()\n",
-    "            emissions['Mode_confirm_lb_CO2'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
-    "            emissions['distance_miles'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
-    "\n",
-    "            # Sum daily energy for each user\n",
-    "            energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance_miles']].sum()\n",
-    "            energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "            energy['distance_miles'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "\n",
-    "            # Add 7-day rolling avg smoothing to better see trends\n",
-    "            mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            emissions['distance_miles_smooth'] = emissions.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "            energy['distance_miles_smooth'] = energy.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
+    "            mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = 'lb', distance_unit = 'distance_miles')"
    ]
   },
   {
@@ -216,44 +202,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (len(dynamic_labels)) > 0:\n",
-    "    plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
-    "    file_name = \"ts_emissions_user%s\"%file_suffix\n",
+    "plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
+    "file_name = \"ts_emissions_user%s\"%file_suffix\n",
     "\n",
+    "def emission_per_week(emissions, unit, debug_df, active_users):\n",
     "    try:\n",
     "        # Emissions per week across all users (net impact)\n",
-    "        plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_kg_CO2'].agg(['sum'])\n",
+    "        plot_data = emissions.groupby(['date_time'], as_index=False)[f'Mode_confirm_{unit}_CO2'].agg(['sum'])\n",
     "        total_sum = plot_data['sum'].sum()\n",
-    "\n",
     "        plot_data = plot_data.merge(active_users, on='date_time')\n",
     "        plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "        ylab = 'Emissions (kg CO2/day/user)'\n",
+    "        ylab = f'Emissions ({unit} CO2/day/user)'\n",
     "        timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "    except:\n",
     "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
+    "\n",
+    "if (len(dynamic_labels)) > 0:\n",
+    "    emission_per_week(emissions, 'kg', debug_df, active_users)\n",
     "else:\n",
-    "    plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
-    "    file_name = \"ts_emissions_user%s\"%file_suffix\n",
-    "\n",
-    "    try:\n",
-    "        # Emissions per week across all users (net impact)\n",
-    "        plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_lb_CO2'].agg(['sum'])\n",
-    "        total_sum = plot_data['sum'].sum()\n",
-    "\n",
-    "        plot_data = plot_data.merge(active_users, on='date_time')\n",
-    "        plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
-    "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "        ylab = 'Emissions (lb CO2/day/user)'\n",
-    "        timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
-    "    except:\n",
-    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    emission_per_week(emissions, 'lb', debug_df, active_users)"
    ]
   },
   {
@@ -301,42 +272,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if (len(dynamic_labels) > 0):\n",
-    "    plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
-    "    file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
-    "\n",
+    "plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
+    "file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
+    "def emissions_per_distance_day(emissions, weight_unit, distance_unit, distance_unit_smooth, debug_df):\n",
     "    try:\n",
     "        # Emissions per kilometer per day across all users (travel efficiency)\n",
     "        # Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "        emissions['CO2_per_km'] = emissions['Mode_confirm_kg_CO2'] / emissions['distance_smooth']\n",
-    "        emissions['CO2_per_km'] = emissions['CO2_per_km'].fillna(0)\n",
-    "        plot_data = emissions.groupby(['date_time'])['CO2_per_km'].agg(['mean']).reset_index()\n",
+    "        emissions[f'CO2_per_{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'] / emissions[f'{distance_unit_smooth}']\n",
+    "        emissions[f'CO2_per_{distance_unit}'] = emissions[f'CO2_per_{distance_unit}'].fillna(0)\n",
+    "        plot_data = emissions.groupby(['date_time'])[f'CO2_per_{distance_unit}'].agg(['mean']).reset_index()\n",
     "\n",
     "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "        ylab = 'Emissions (kg CO2/km/day)'\n",
+    "        ylab = f'Emissions ({weight_unit} CO2/{distance_unit}/day)'\n",
     "        timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
     "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "    except:\n",
     "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
+    "\n",
+    "if (len(dynamic_labels) > 0):\n",
+    "    emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth', debug_df)\n",
     "else:\n",
-    "    plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
-    "    file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
-    "\n",
-    "    try:\n",
-    "        # Emissions per kilometer per day across all users (travel efficiency)\n",
-    "        # Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "        emissions['CO2_per_mile'] = emissions['Mode_confirm_lb_CO2'] / emissions['distance_miles_smooth']\n",
-    "        emissions['CO2_per_mile'] = emissions['CO2_per_mile'].fillna(0)\n",
-    "        plot_data = emissions.groupby(['date_time'])['CO2_per_mile'].agg(['mean']).reset_index()\n",
-    "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "        ylab = 'Emissions (lb CO2/mile/day)'\n",
-    "        timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
-    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
-    "    except:\n",
-    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+    "    emissions_per_distance_day(emissions, 'lb', 'mile','distance_miles_smooth', debug_df)"
    ]
   },
   {
@@ -406,8 +363,7 @@
     "    plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
     "\n",
     "    if (len(dynamic_labels) > 0):\n",
-    "            label_type = \"MODE\"\n",
-    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, label_type)\n",
+    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, label_type = \"MODE\")\n",
     "            plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
     "    else:\n",
     "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
