--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -222,40 +222,39 @@
     "    ebco2 = ebco2.sort_values(by=[f'total_{weight_unit}_CO2_emissions'], ascending=False)\n",
     "    return ebco2\n",
     "\n",
-    "def display_total_CO2_emissions(data_eb, weight_unit, weight_unit_debug, debug_df, mode_of_interest):\n",
-    "    try:\n",
-    "        plot_title_no_quality=f\"Sketch of Total {weight_unit} of CO2 Emissions of {mode_of_interest} trips\"\n",
-    "        file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
-    "        \n",
-    "        ebco2 = ebco2_compute(data_eb, weight_unit)\n",
-    "        net_CO2_emissions = round(sum(ebco2[f'total_{weight_unit}_CO2_emissions']), 2)\n",
-    "        ebco2['boolean'] = ebco2[f'total_{weight_unit}_CO2_emissions'] > 0\n",
+    "def display_total_CO2_emissions(data_eb, weight_unit, weight_unit_debug, mode_of_interest):\n",
+    "    plot_title_no_quality=f\"Sketch of Total {weight_unit} of CO2 Emissions of {mode_of_interest} trips\"\n",
+    "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
+    "    \n",
+    "    ebco2 = ebco2_compute(data_eb, weight_unit)\n",
+    "    net_CO2_emissions = round(sum(ebco2[f'total_{weight_unit}_CO2_emissions']), 2)\n",
+    "    ebco2['boolean'] = ebco2[f'total_{weight_unit}_CO2_emissions'] > 0\n",
+    "    x = ebco2[f'total_{weight_unit}_CO2_emissions']\n",
+    "    y = ebco2['Replaced_mode']\n",
+    "    xLabel = f'CO2 Emissions ({weight_unit})'\n",
+    "    yLabel = 'Replaced Mode'\n",
+    "    color = ebco2['boolean']\n",
     "\n",
-    "        x = ebco2[f'total_{weight_unit}_CO2_emissions']\n",
-    "        y = ebco2['Replaced_mode']\n",
-    "        xLabel = f'CO2 Emissions ({weight_unit})'\n",
-    "        yLabel = 'Replaced Mode'\n",
-    "        color = ebco2['boolean']\n",
+    "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}({weight_unit} CO2 Emissions )\\n\"+quality_text\n",
+    "    CO2_impact(x,y,color,plot_title, xLabel,yLabel,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
     "\n",
-    "        plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}({weight_unit} CO2 Emissions )\\n\"+quality_text\n",
-    "        CO2_impact(x,y,color,plot_title, xLabel,yLabel,file_name)\n",
-    "        alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
+    "    # For debugging: Computing and displaying Total CO2 emissions in both Metric(kg) and Imperial(lb) unit system for easy comparison.\n",
+    "    if (is_debug_mode == True):\n",
+    "        ebco2_debug = ebco2_compute(data_eb, weight_unit_debug)\n",
+    "        if (weight_unit == 'kg'):\n",
+    "            scaffolding.print_CO2_emission_calculations(data_eb, ebco2_debug, ebco2, dynamic_labels)\n",
+    "        else:\n",
+    "            scaffolding.print_CO2_emission_calculations(data_eb, ebco2, ebco2_debug, dynamic_labels)\n",
     "\n",
-    "        # For debugging: Computing and displaying Total CO2 emissions in both Metric(kg) and Imperial(lb) unit system for easy comparison.\n",
-    "        if (is_debug_mode == True):\n",
-    "            ebco2_debug = ebco2_compute(data_eb, weight_unit_debug)\n",
-    "            if (weight_unit == 'kg'):\n",
-    "                scaffolding.print_CO2_emission_calculations(data_eb, ebco2_debug, ebco2, dynamic_labels)\n",
-    "            else:\n",
-    "                scaffolding.print_CO2_emission_calculations(data_eb, ebco2, ebco2_debug, dynamic_labels)\n",
-    "    except:\n",
-    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
-    "\n",
-    "if (len(dynamic_labels) > 0):\n",
-    "    display_total_CO2_emissions(data_eb,'kg','lb', debug_df, mode_of_interest)\n",
-    "else:\n",
-    "    display_total_CO2_emissions(data_eb,'lb','kg', debug_df, mode_of_interest)"
+    "try:\n",
+    "    if (len(dynamic_labels) > 0):\n",
+    "        display_total_CO2_emissions(data_eb,'kg','lb', mode_of_interest)\n",
+    "    else:\n",
+    "        display_total_CO2_emissions(data_eb,'lb','kg', mode_of_interest)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   }
  ],
