--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -148,22 +148,27 @@
    "outputs": [],
    "source": [
     "def compute_daily_metrics(data, weight_unit, distance_unit):\n",
+    "    # Sum daily distance traveled for each mode\n",
     "    mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[[f'{distance_unit}']].sum()\n",
     "    mode_distance.rename(columns={'sum':f'{distance_unit}'}, inplace=True)\n",
     "    mode_distance[f'{distance_unit}'] = mode_distance[f'{distance_unit}'].fillna(0)\n",
     "    \n",
+    "    # Sum daily emissions for each user\n",
     "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'Mode_confirm_{weight_unit}_CO2', f'{distance_unit}']].sum()\n",
     "    emissions[f'Mode_confirm_{weight_unit}_CO2'] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
     "    emissions[f'{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
     "    \n",
+    "    # Sum daily energy for each user\n",
     "    energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', f'{distance_unit}']].sum()\n",
     "    energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
     "    energy[f'{distance_unit}'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
     "    \n",
+    "    # Add 7-day rolling avg smoothing to better see trends\n",
     "    mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
     "    mode_distance[f'{distance_unit}smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
     "    emissions[f'{distance_unit}_smooth'] = emissions.groupby(['user_id'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
     "    energy[f'{distance_unit}_smooth'] = energy.groupby(['user_id'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "\n",
     "    return mode_counts, mode_distance, emissions, energy\n",
     "\n",
     "if len(expanded_ct) > 0:\n",
@@ -206,25 +211,24 @@
     "file_name = \"ts_emissions_user%s\"%file_suffix\n",
     "\n",
     "def emission_per_week(emissions, unit, debug_df, active_users):\n",
-    "    try:\n",
-    "        # Emissions per week across all users (net impact)\n",
-    "        plot_data = emissions.groupby(['date_time'], as_index=False)[f'Mode_confirm_{unit}_CO2'].agg(['sum'])\n",
-    "        total_sum = plot_data['sum'].sum()\n",
-    "        plot_data = plot_data.merge(active_users, on='date_time')\n",
-    "        plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
+    "    # Emissions per week across all users (net impact)\n",
+    "    plot_data = emissions.groupby(['date_time'], as_index=False)[f'Mode_confirm_{unit}_CO2'].agg(['sum'])\n",
+    "    total_sum = plot_data['sum'].sum()\n",
+    "    plot_data = plot_data.merge(active_users, on='date_time')\n",
+    "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "        ylab = f'Emissions ({unit} CO2/day/user)'\n",
-    "        timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
-    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
-    "    except:\n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    ylab = f'Emissions ({unit} CO2/day/user)'\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
+    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
+    "\n",
+    "try:\n",
+    "    if (len(dynamic_labels)) > 0:\n",
+    "        emission_per_week(emissions, 'kg', debug_df, active_users)\n",
+    "    else:\n",
     "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
-    "\n",
-    "if (len(dynamic_labels)) > 0:\n",
-    "    emission_per_week(emissions, 'kg', debug_df, active_users)\n",
-    "else:\n",
-    "    emission_per_week(emissions, 'lb', debug_df, active_users)"
+    "except:\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
@@ -274,26 +278,27 @@
    "source": [
     "plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
     "file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
-    "def emissions_per_distance_day(emissions, weight_unit, distance_unit, distance_unit_smooth, debug_df):\n",
-    "    try:\n",
-    "        # Emissions per kilometer per day across all users (travel efficiency)\n",
-    "        # Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "        emissions[f'CO2_per_{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'] / emissions[f'{distance_unit_smooth}']\n",
-    "        emissions[f'CO2_per_{distance_unit}'] = emissions[f'CO2_per_{distance_unit}'].fillna(0)\n",
-    "        plot_data = emissions.groupby(['date_time'])[f'CO2_per_{distance_unit}'].agg(['mean']).reset_index()\n",
     "\n",
-    "        plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "        ylab = f'Emissions ({weight_unit} CO2/{distance_unit}/day)'\n",
-    "        timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
-    "        alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
-    "    except:\n",
-    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
-    "        alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)\n",
+    "def emissions_per_distance_day(emissions, weight_unit, distance_unit, distance_unit_smooth,):\n",
+    "    # Emissions per kilometer per day across all users (travel efficiency)\n",
+    "    # Note that the energy plot will be identical to this one since scale factor is divided out\n",
+    "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'] / emissions[f'{distance_unit_smooth}']\n",
+    "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'CO2_per_{distance_unit}'].fillna(0)\n",
+    "    plot_data = emissions.groupby(['date_time'])[f'CO2_per_{distance_unit}'].agg(['mean']).reset_index()\n",
+    "    \n",
+    "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
+    "    ylab = f'Emissions ({weight_unit} CO2/{distance_unit}/day)'\n",
+    "    timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
+    "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "\n",
-    "if (len(dynamic_labels) > 0):\n",
-    "    emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth', debug_df)\n",
-    "else:\n",
-    "    emissions_per_distance_day(emissions, 'lb', 'mile','distance_miles_smooth', debug_df)"
+    "try:\n",
+    "    if (len(dynamic_labels) > 0):\n",
+    "        emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth')\n",
+    "    else:\n",
+    "        emissions_per_distance_day(emissions, 'lb', 'mile','distance_miles_smooth')\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
