Fixed issue with default mapping - calling the right function. Updated prefix to the new functions to reflect its functionality.

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -210,7 +210,7 @@
     "plot_title_no_quality = 'Net Daily Emissions (All Users, excluding air)'\n",
     "file_name = \"ts_emissions_user%s\"%file_suffix\n",
     "\n",
-    "def emission_per_week(emissions, unit, debug_df, active_users):\n",
+    "def plot_emission_per_week(emissions, unit, active_users):\n",
     "    # Emissions per week across all users (net impact)\n",
     "    plot_data = emissions.groupby(['date_time'], as_index=False)[f'Mode_confirm_{unit}_CO2'].agg(['sum'])\n",
     "    total_sum = plot_data['sum'].sum()\n",
@@ -224,10 +224,11 @@
     "\n",
     "try:\n",
     "    if (len(dynamic_labels)) > 0:\n",
-    "        emission_per_week(emissions, 'kg', debug_df, active_users)\n",
+    "        plot_emission_per_week(emissions, 'kg', active_users)\n",
     "    else:\n",
-    "        generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "        plot_emission_per_week(emissions, 'lb', active_users)\n",
     "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
@@ -279,7 +280,7 @@
     "plot_title_no_quality = 'Average Daily Emission Rate (All Users, excluding air)'\n",
     "file_name = \"ts_emissions_vmt%s\"%file_suffix\n",
     "\n",
-    "def emissions_per_distance_day(emissions, weight_unit, distance_unit, distance_unit_smooth,):\n",
+    "def plot_emissions_per_distance_day(emissions, weight_unit, distance_unit, distance_unit_smooth,):\n",
     "    # Emissions per kilometer per day across all users (travel efficiency)\n",
     "    # Note that the energy plot will be identical to this one since scale factor is divided out\n",
     "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'] / emissions[f'{distance_unit_smooth}']\n",
@@ -293,9 +294,9 @@
     "\n",
     "try:\n",
     "    if (len(dynamic_labels) > 0):\n",
-    "        emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth')\n",
+    "        plot_emissions_per_distance_day(emissions, 'kg', 'km', 'distance_smooth')\n",
     "    else:\n",
-    "        emissions_per_distance_day(emissions, 'lb', 'mile','distance_miles_smooth')\n",
+    "        plot_emissions_per_distance_day(emissions, 'lb', 'mile','distance_miles_smooth')\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
