Removed f{'distance_unit'} with distance_unit for compute_daily_metrics() in generic_timeseries notebook.

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -149,25 +149,25 @@
    "source": [
     "def compute_daily_metrics(data, weight_unit, distance_unit):\n",
     "    # Sum daily distance traveled for each mode\n",
-    "    mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[[f'{distance_unit}']].sum()\n",
-    "    mode_distance.rename(columns={'sum':f'{distance_unit}'}, inplace=True)\n",
-    "    mode_distance[f'{distance_unit}'] = mode_distance[f'{distance_unit}'].fillna(0)\n",
+    "    mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[[distance_unit]].sum()\n",
+    "    mode_distance.rename(columns={'sum':distance_unit}, inplace=True)\n",
+    "    mode_distance[distance_unit] = mode_distance[distance_unit].fillna(0)\n",
     "    \n",
     "    # Sum daily emissions for each user\n",
-    "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'Mode_confirm_{weight_unit}_CO2', f'{distance_unit}']].sum()\n",
+    "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'Mode_confirm_{weight_unit}_CO2', distance_unit]].sum()\n",
     "    emissions[f'Mode_confirm_{weight_unit}_CO2'] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
-    "    emissions[f'{distance_unit}'] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
+    "    emissions[distance_unit] = emissions[f'Mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
     "    \n",
     "    # Sum daily energy for each user\n",
-    "    energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', f'{distance_unit}']].sum()\n",
+    "    energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', distance_unit]].sum()\n",
     "    energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "    energy[f'{distance_unit}'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "    energy[distance_unit] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
     "    \n",
     "    # Add 7-day rolling avg smoothing to better see trends\n",
     "    mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "    mode_distance[f'{distance_unit}smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "    emissions[f'{distance_unit}_smooth'] = emissions.groupby(['user_id'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "    energy[f'{distance_unit}_smooth'] = energy.groupby(['user_id'])[f'{distance_unit}'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    mode_distance[f'{distance_unit}_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    emissions[f'{distance_unit}_smooth'] = emissions.groupby(['user_id'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
+    "    energy[f'{distance_unit}_smooth'] = energy.groupby(['user_id'])[distance_unit].apply(lambda x: x.rolling(7,1).mean())\n",
     "\n",
     "    return mode_counts, mode_distance, emissions, energy\n",
     "\n",
