--- a/viz_scripts/mapping_dictionaries.ipynb
+++ b/viz_scripts/mapping_dictionaries.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "available-fusion",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "obvious-chapter",
    "metadata": {},
    "outputs": [],
@@ -29,21 +30,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "younger-indication",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%store df_ei\n",
-    "%store dic_re\n",
-    "%store dic_pur\n",
-    "%store dic_fuel"
+    "# %store df_ei\n",
+    "# %store dic_re\n",
+    "# %store dic_pur\n",
+    "# %store dic_fuel\n",
+    "\n",
+    "with open('auxiliary_files/df_ei.pkl', 'wb') as f:\n",
+    "    f.write(pickle.dumps(df_ei))\n",
+    "\n",
+    "with open('auxiliary_files/dic_re.pkl', 'wb') as f:\n",
+    "    f.write(pickle.dumps(dic_re))\n",
+    "\n",
+    "with open('auxiliary_files/dic_pur.pkl', 'wb') as f:\n",
+    "    f.write(pickle.dumps(dic_pur))\n",
+    "\n",
+    "with open('auxiliary_files/dic_fuel.pkl', 'wb') as f:\n",
+    "    f.write(pickle.dumps(dic_fuel))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e389b3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ab0c6e94c9422d07d42069ec9e3bb23090f5e156fc0e23cc25ca45a62375bf53"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.16 ('emission')",
    "language": "python",
    "name": "python3"
   },
@@ -57,7 +81,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
